--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-   "name":"iobroker.dmxface",
+   "name":"iobroker.RikaFirenet",
    "version":"1.1.0",
-   "description":"DMXfaceXP adapter for ioBroker",
+   "description":"Rika Firenet adapter for ioBroker",
    "author":{
-      "name":"Hufnagl Oliver",
-      "email":"mail@dmxface.at"
+      "name":"Helmut",
+      "email":"mail@HST.at"
    },
-   "homepage":"https://github.com/DMXface/ioBroker.dmxface",
+   "homepage":"https://github.com/Helmut21/ioBroker.RikaFirenet",
    "license":"MIT",
    "keywords":[
       "ioBroker",
-      "dmxface",
-      "DMXfaceXP",
-      "Media controller",
+      "RikaFirenet",
+      "Rika",
+      "Firenet",
       "Smart Home",
       "home automation"
    ],
    "repository":{
       "type":"git",
-      "url":"https://github.com/DMXface/ioBroker.dmxface"
+      "url":"https://github.com/Helmut21/ioBroker.RikaFirenet"
    },
    "dependencies":{
       "@iobroker/adapter-core":"^1.0.3"
@@ -31,7 +31,7 @@
 
    },
    "bugs":{
-      "url":"https://github.com/DMXface/ioBroker.dmxface/issues"
+      "url":"https://github.com/Helmut21/ioBroker.RikaFirenet/issues"
    },
    "readmeFilename":"README.md"
 }
